# GreenSentinel-Citizen-App

./: .env.dev  .env.dev.example  .env.prod  .env.prod.example  .gitignore  Makefile  README.md  architecture.md  demo.sh  design-system.md  design-tokens.json  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  temp_config.py  temp_config_updated.py  temp_database_fixed.py  temp_env.py  temp_env_fixed.py  temp_migration.py  temp_migration_fix.py  temp_seed_demo_content.txt  temp_seed_demo_final.py  temp_seed_demo_fixed.py  temp_seed_demo_fixed_v2.py
backend/: .env.example  Dockerfile  README-backend.md  alembic.ini  create_users.py  docker-compose.yml  fix_password.py  generate_hash.py  greensentinel.db  migration_fix.py  pyproject.toml  requirements.txt  verify_users.py
backend/alembic/: env.py
backend/alembic/versions/: 20250619_0015_init.py  20250619_0159_add_confidence_text_to_incident.py
backend/app/: config.py  main.py
backend/app/core/: database.py  events.py  models.py  schemas.py  security.py
backend/app/schemas/: alert.py  users.py
backend/app/services/: llm_client.py  mq.py  storage.py  vision_client.py  ws_manager.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_alerts.py  test_export_incidents.py  test_health.py  test_incident.py  test_llm_integration.py  test_mq_publish.py  test_vision_integration.py  test_websocket_incidents.py
backend/worker_service/: Dockerfile  README-worker.md  requirements.txt
backend/worker_service/app/: config.py  consumers.py  log_config.py  main.py  push.py
(+271 files in other folders)
